HTML/CSS formatting fixes to align with style guide

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,6 +1,6 @@
 #navbar {
-  width: 100%;
   overflow: hidden;
+  width: 100%;
 }
 #navbar ul {
   list-style-type: none;
@@ -9,42 +9,40 @@
   float: left;
 }
 #navbar li a {
+  color: #000000;
   display: block;
-  color: black;
-  text-align: center;
   padding: 14px 16px;
+  text-align: center;
   text-decoration: none;
 }
 #navbar li a:hover {
-  background-color: lightcoral;
+  background-color: #006c84;
+  color: #ffffff;
 }
 
 #content {
-  margin: auto;
   display: block;
+  margin: auto;
   text-align: center;
 }
 
 #greeting-container {
   margin-top: 30px;
-  color: blanchedalmond;
 }
 
 #homelinks img {
-  width: 50px;
   padding: 10px;
+  width: 50px;
 }
 
-#projectscontent {
-  margin-right: auto;
+#projects-content {
   left: 10%;
+  margin-right: auto;
   position: relative;
 }
-#projectscontent .projectblock {
-  border: 1mm;
-  border-color: lightcoral;
-  border-style: double;
+#projects-content .project-block {
+  border: 1mm double #006c84;
+  margin: 10px;
   padding: 15px;
   width: 60%;
-  margin: 10px;
 }
